# getinfo

./: .clangd  .gitignore  Cargo.toml  Makefile  README.md  build.sh  flake.nix  main.c  notes.md  output
crates/battery/: Cargo.toml
crates/battery/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/media-player/: Cargo.toml
crates/media-player/src/: media.rs
crates/media_player/: Cargo.toml
crates/media_player/src/: lib.rs
crates/media_player/src/media/: mod.rs  properties.rs
crates/media_player/src/media/try_as_value/: deserialize.rs
lib/battery/: Cargo.toml
lib/battery/src/: lib.rs
lib/core/: Cargo.toml
lib/core/src/: lib.rs
lib/media-player/: Cargo.toml
lib/media-player/src/: main.rs
lib/media-player/src/media/: try_as_value.rs
src/: main.rs
src/commands/: battery.rs  media.rs  mod.rs
src/media/: properties.rs
src/media/try_as_value/: deserialize.rs
