[package]
name = "getinfo"
description = "Collection of useful scripts for widgets, panels, and bars"
version.workspace = true
license.workspace = true
edition.workspace = true
# authors.workspace = true
# categories.workspace = true
# homepage.workspace = true
# keywords.workspace = true
# readme.workspace = true

[workspace]
resolver = "3"
members = [
    ".",
    "crates/*",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["cargo"]}
dashmap = "6.1.0"
futures-lite = "2.6.0"
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["macros", "rt", "sync", "time"] }
zbus = { version = "5.6.0", features = ["tokio"] }
gi_core = { version = "0.1.0", path = "crates/core" }
gi_media_player = { version = "0.1.0", path = "crates/media_player" }
gi_battery = { version = "0.1.0", path = "crates/battery"}
thiserror = "2.0.12"

[dependencies]
clap = { workspace = true }
gi_core = { workspace = true }
gi_media_player = { workspace = true }
gi_battery = { workspace = true }

# https://github.com/uutils/coreutils/blob/56ce0e28ad830e276929d9e2f798fb55bbc5112c/Cargo.toml#L623
# cargo clippy --all-targets --workspace --message-format=json --quiet \
#     | jq -r '.message.code.code | select(. != null and startswith("clippy::"))' \
#     | sort | uniq -c | sort -h -r

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = "fat"
panic = "abort"

[workspace.lints.clippy]
# all = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
