[package]
name = "gi_battery"
description = "Scripts for battery information"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
# authors.workspace = true
# categories.workspace = true
# homepage.workspace = true
# keywords.workspace = true
# readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
gi_core = { workspace = true }
thiserror = { workspace = true }
# dashmap = { workspace = true }
# futures-lite = { workspace = true }
# serde = { workspace = true }
# tokio = { workspace = true }
