[package]
name = "gi_core"
description = "Core functionality for bars"
repository = ""
version.workspace = true
license.workspace = true
edition.workspace = true
# authors.workspace = true
# categories.workspace = true
# homepage.workspace = true
# keywords.workspace = true
# readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
# dashmap = { workspace = true }
# futures-lite = { workspace = true }
# serde = { workspace = true }
# tokio = { workspace = true }
