[package]
name = "gi_media_player"
description = "Scripts for getting info on media player"
repository = "https://github.com/fqidz/getinfo/tree/main/crates/media_player"
edition.workspace = true
license.workspace = true
version.workspace = true
# authors.workspace = true
# categories.workspace = true
# homepage.workspace = true
# keywords.workspace = true
# readme.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
dashmap = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
